--- a/docs/Basic-usage.ipynb
+++ b/docs/Basic-usage.ipynb
@@ -41,17 +41,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "29f3b39b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ollama::Client(:base-url(\"http://localhost:11434\"), :ollama-is-running, :version(\"0.13.5\"), :models-in-memory(1), :local-models(8))"
+       "Ollama::Client(:base-url(\"http://localhost:11434\"), :ollama-is-running, :version(\"0.13.5\"), :models-in-memory(0), :local-models(9))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +59,8 @@
    "source": [
     "use WWW::Ollama::Client;\n",
     "\n",
-    "my $ollama = WWW::Ollama::Client.new(host => 'localhost', :11434port);"
+    "#my $ollama = WWW::Ollama::Client.new(host => 'localhost', :11434port);\n",
+    "my $ollama = WWW::Ollama::Client.new(:!ensure-running);"
    ]
   },
   {
@@ -74,17 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "960d1105",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Vector(Struct([details, digest, model, modified_at, name, size], [Hash, Str, Str, Str, Str, Int]), 8)"
+       "Vector(Struct([details, digest, model, modified_at, name, size], [Hash, Str, Str, Str, Str, Int]), 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cd1b1d62",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table border=\"1\"><thead><tr><th>name</th><th>size</th><th>size-short</th><th>modified_at</th></tr></thead><tbody><tr><td>qwen3:4b-q4_K_M</td><td>2620788260</td><td>2.4 GB</td><td>2025-09-13</td></tr><tr><td>gemma3n:latest</td><td>7547589116</td><td>7 GB</td><td>2025-09-13</td></tr><tr><td>gemma3:4b</td><td>3338801804</td><td>3.1 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:1b</td><td>815319791</td><td>0.8 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:4b-it-qat</td><td>4006630865</td><td>3.7 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:12b</td><td>8149190253</td><td>7.6 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:27b</td><td>17396936941</td><td>16.2 GB</td><td>2026-01-06</td></tr><tr><td>deepseek-r1:latest</td><td>5225376047</td><td>4.9 GB</td><td>2026-01-07</td></tr></tbody></table>"
+       "<table border=\"1\"><thead><tr><th>name</th><th>size</th><th>size-short</th><th>modified_at</th></tr></thead><tbody><tr><td>qwen3:4b-q4_K_M</td><td>2620788260</td><td>2.4 GB</td><td>2025-09-13</td></tr><tr><td>gemma3n:latest</td><td>7547589116</td><td>7 GB</td><td>2025-09-13</td></tr><tr><td>gemma3:4b</td><td>3338801804</td><td>3.1 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:1b</td><td>815319791</td><td>0.8 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:4b-it-qat</td><td>4006630865</td><td>3.7 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:12b</td><td>8149190253</td><td>7.6 GB</td><td>2026-01-05</td></tr><tr><td>gemma3:27b</td><td>17396936941</td><td>16.2 GB</td><td>2026-01-06</td></tr><tr><td>deepseek-r1:latest</td><td>5225376047</td><td>4.9 GB</td><td>2026-01-07</td></tr><tr><td>qwen3:4b</td><td>2497293931</td><td>2.3 GB</td><td>2026-01-09</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,17 +134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c4c5af7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Struct([Content, Durations, FinishReason, Model, Role, Throughput, Timestamp, ToolRequests, Usage], [Str, Hash, Str, Str, Str, Rat, DateTime, Any, Hash])"
+       "Struct([content, durations, finish-reason, model, role, throughput, timestamp, tool-requests, usage], [Str, Hash, Str, Str, Str, Rat, DateTime, Any, Hash])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,18 +170,19 @@
     {
      "data": {
       "text/markdown": [
-       "As of 2023, the estimated population of Brazil is around **216.4 million** people. \n",
+       "As of October 26, 2023, the population of Brazil is estimated to be around **217.6 million** people.\n",
        "\n",
-       "Here’s a breakdown of the approximate figures:\n",
+       "Here's a breakdown of the approximate figures:\n",
        "\n",
-       "*   **Total Population:** Approximately 216.4 million\n",
-       "*   **Urban Population:** Around 175 million\n",
-       "*   **Rural Population:** Approximately 41 million\n",
+       "*   **Total Population:** Approximately 217.6 million\n",
+       "*   **Urban Population:** Around 166.4 million (This includes the majority of the population in cities and towns)\n",
+       "*   **Rural Population:** Approximately 51.6 million (This includes the vast majority of the population in rural areas)\n",
        "\n",
-       "Keep in mind that these are estimates and the population is constantly changing. You can find the most up-to-date figures on the following websites:\n",
+       "**Sources:**\n",
        "\n",
        "*   **Worldometer:** [https://www.worldometers.info/world-population/brazil-population/](https://www.worldometers.info/world-population/brazil-population/)\n",
-       "*   **CIA World Fact:** [https://www.cia.gov/the-world/countries/brazil](https://www.cia.gov/the-world/countries/brazil)"
+       "\n",
+       "Keep in mind that these figures are estimates and constantly updated."
       ]
      },
      "execution_count": 6,
@@ -191,7 +193,7 @@
    "source": [
     "#% markdown\n",
     "\n",
-    "$ans<Content>;"
+    "$ans<content>;"
    ]
   },
   {
@@ -211,7 +213,7 @@
     {
      "data": {
       "text/html": [
-       "<ul><li><table border=\"1\"><tr><th>Throughput</th><td>87.02412131</td></tr></table></li><li><table border=\"1\"><tr><th>Model</th><td>gemma3:1b</td></tr></table></li><li><table border=\"1\"><tr><th>FinishReason</th><td>stop</td></tr></table></li><li><table border=\"1\"><tr><th>ToolRequests</th><td>(Any)</td></tr></table></li><li><table border=\"1\"><tr><th>Usage</th><td><table border=\"1\"><tr><th>completion</th><td>197</td></tr><tr><th>prompt</th><td>16</td></tr></table></td></tr></table></li><li><table border=\"1\"><tr><th>Role</th><td>assistant</td></tr></table></li><li><table border=\"1\"><tr><th>Durations</th><td><table border=\"1\"><tr><th>total</th><td>2.44759725</td></tr><tr><th>prompt_eval</th><td>0.050202708</td></tr><tr><th>eval</th><td>2.139394248</td></tr><tr><th>load</th><td>0.180846542</td></tr></table></td></tr></table></li><li><table border=\"1\"><tr><th>Timestamp</th><td>2026-01-09T14:45:47.816911-05:00</td></tr></table></li></ul>"
+       "<ul><li><table border=\"1\"><tr><th>durations</th><td><table border=\"1\"><tr><th>load</th><td>0.79376525</td></tr><tr><th>eval</th><td>1.779067617</td></tr><tr><th>total</th><td>2.74966388</td></tr><tr><th>prompt_eval</th><td>0.089080208</td></tr></table></td></tr></table></li><li><table border=\"1\"><tr><th>timestamp</th><td>2026-01-10T08:35:11.032098-05:00</td></tr></table></li><li><table border=\"1\"><tr><th>throughput</th><td>69.82671655</td></tr></table></li><li><table border=\"1\"><tr><th>finish-reason</th><td>stop</td></tr></table></li><li><table border=\"1\"><tr><th>usage</th><td><table border=\"1\"><tr><th>completion</th><td>176</td></tr><tr><th>prompt</th><td>16</td></tr></table></td></tr></table></li><li><table border=\"1\"><tr><th>model</th><td>gemma3:1b</td></tr></table></li><li><table border=\"1\"><tr><th>role</th><td>assistant</td></tr></table></li><li><table border=\"1\"><tr><th>tool-requests</th><td>(Any)</td></tr></table></li></ul>"
       ]
      },
      "execution_count": 7,
@@ -221,7 +223,7 @@
    ],
    "source": [
     "#% html\n",
-    "$ans.grep(*.key ne 'Content')\n",
+    "$ans.grep(*.key ne 'content')\n",
     "==> to-html"
    ]
   },
@@ -244,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "Struct([Content, Durations, FinishReason, Model, Role, Throughput, Timestamp, ToolRequests, Usage], [Str, Hash, Str, Str, Str, Rat, DateTime, Any, Hash])"
+       "Struct([content, durations, finish-reason, model, role, throughput, timestamp, tool-requests, usage], [Str, Hash, Str, Str, Str, Rat, DateTime, Any, Hash])"
       ]
      },
      "execution_count": 8,
@@ -272,55 +274,73 @@
     {
      "data": {
       "text/markdown": [
-       "Estimating the exact number of people living in different states of India is a complex and rapidly evolving task due to fluctuating population data, migration patterns, and ongoing demographic shifts. However, here's a breakdown of what we know, combining current estimates and recent trends:\n",
+       "Okay, this is a massive and incredibly complex question! Determining the exact number of people living in different states of India is an ongoing effort, and there's no single definitive answer. However, we can provide a really robust estimate based on the latest data and research.\n",
        "\n",
-       "**1. Total Population (as of late 2023/early 2024): ~1.4 Billion People**\n",
+       "**Here's a breakdown of the estimated number of people across different states, presented in a layered way:**\n",
        "\n",
-       "This is the overall population of India.\n",
+       "**1.  Total Population Estimate (2023/2024):**\n",
        "\n",
-       "**2. Regional Distribution - Key Breakdown (Approximate Figures - Significant Variability):**\n",
+       "*   As of late 2023/early 2024, the estimated total population of India is around **1.4 billion people**.\n",
        "\n",
-       "* **North-East India (Assam,hra, Manipur, Mizoram, Nagaland, andior):** ~ 40-45 million – This region is experiencing rapid population growth and is becoming increasingly interconnected with the rest of India.\n",
-       "* **South India (Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, Kerala, Tamil Nadu, andicherry):** ~ 55-60 million – A significant population concentration, with a strong agricultural base.\n",
-       "* **West India (Maharashtra, Gujarat, Rajasthan, Madhya Pradesh, and Punjab):** ~ 65-75 million – A massive population, known for its economic power and diverse demographics.\n",
-       "* **East India (West Bengal, Odisha, Bihar, Jharkhand, and Uttar Pradesh):** ~ 45-50 million – A less densely populated region, but with significant regional diversity.\n",
-       "* **Central India (Uttar Pradesh, Madhya Pradesh, Bihar, Rajasthan, and Haryana):** ~ 40-45 million – A large and largely agricultural region.\n",
-       "* **Northern India (Delhi, Himachal Pradesh, Uttarakhand, and Ladakh):** ~ 30-35 million – A growing area, especially in the Himalayan region.\n",
-       "* **Southern India (Karnataka, Kerala, Tamil Nadu, and Andhra Pradesh):** ~ 35-40 million – A diverse region with significant coastal influence.\n",
+       "**2.  State-by-State Breakdown (Approximate):**\n",
        "\n",
-       "**3. Detailed Breakdown by State (Illustrative – Numbers are Fluctuating):**\n",
+       "Let’s break this down by state, recognizing that these numbers are *estimates* and vary by source.  I'll categorize them roughly by population size:\n",
        "\n",
-       "* **Maharashtra:** ~ 1.4 Billion (Highly Concentrated)\n",
-       "* **Tamil Nadu:** ~ 70+ Million\n",
-       "* **Uttar Pradesh:** ~ 25+ Million\n",
-       "* **Gujarat:** ~ 75+ Million\n",
-       "* **West Bengal:** ~ 35+ Million\n",
-       "* **Rajasthan:** ~ 30+ Million\n",
-       "* **Karnataka:** ~ 30+ Million\n",
-       "* **Kerala:** ~ 35+ Million\n",
-       "* **Madhya Pradesh & Bihar:** ~ 25+ Million\n",
-       "* **Punjab & Haryana:** ~ 20+ Million\n",
+       "**A. Top 10 States by Population (Approximate, as of 2023):**\n",
        "\n",
-       "**4.  Important Considerations & Trends:**\n",
+       "1.  **Maharashtra:** ~108 Million\n",
+       "2.  **India:** ~1.4 Billion\n",
+       "3.  **Uttar Pradesh:** ~73 Million\n",
+       "4.  **West Bengal:** ~31 Million\n",
+       "5.  **Tamil Nadu:** ~68 Million\n",
+       "6.  **Delhi:** ~31 Million\n",
+       "7.  **Rajasthan:** ~68 Million\n",
+       "8.  **Bihar:** ~68 Million\n",
+       "9.  ** Karnataka:** ~41 Million\n",
+       "10. ** Haryana:** ~42 Million\n",
        "\n",
-       "* **Migration:** Internal migration is a major factor. People move from rural areas to urban centers, and vice-versa, driven by economic opportunities, better prospects, and social factors.\n",
-       "* **Urbanization:** India is undergoing a massive urban transformation, leading to significant population concentration in major cities.\n",
-       "* **Regional Variations:**  Population density varies dramatically across India.  Some states are extremely densely populated, while others are sparsely populated.\n",
-       "* **Data Lag:**  Population figures are constantly being updated and revised, making precise calculations challenging.  The latest estimates from the Census of India and various demographic surveys are crucial.\n",
-       "* **Disaggregated Data:**  It's important to look at demographic breakdowns by age, gender, and socio-economic status to get a more complete picture.\n",
+       "**B.  Smaller States (Significant Populations – ~10 Million):**\n",
+       "\n",
+       "*   **Gujarat:** ~68 Million\n",
+       "*   **Texas:** ~29 Million (This is an estimate based on population projections)\n",
+       "*   **Mississippi:** ~7 Million\n",
+       "*   **Alabama:** ~5 Million\n",
+       "*   **South Carolina:** ~5 Million\n",
+       "*   **Florida:** ~15 Million\n",
+       "*   **Kentucky:** ~5.5 Million\n",
+       "*   **Oklahoma:** ~4.7 Million\n",
+       "*   **Arkansas:** ~5.3 Million\n",
+       "*   **New Mexico:** ~2.1 Million\n",
+       "\n",
+       "**3.  Detailed Breakdown by Region/Cluster (Important for Understanding Distribution):**\n",
+       "\n",
+       "*   **North India:**  Maharashtra, Uttar Pradesh, Bihar, Rajasthan, and Madhya Pradesh dominate this region.\n",
+       "*   **South India:** Tamil Nadu, Karnataka, Andhra Pradesh, Telangana, and Kerala have substantial populations.\n",
+       "*   **East India:** West Bengal, Odisha, and Assam have large numbers.\n",
+       "*   **Central India:** Madhya Pradesh, Chhattisgarh, and Jharkhand have considerable populations.\n",
+       "*   **Western India:** Maharashtra, Gujarat, and Rajasthan are major contributors.\n",
+       "\n",
+       "**4.  Important Considerations and Caveats:**\n",
+       "\n",
+       "*   **Data Updates:** Population estimates are constantly being revised as new data becomes available. The latest estimates from sources like the Census of India, the National Statistical Office (NSO), and demographic research institutions (like the India Population and Housing Research Center) provide the best information.\n",
+       "*   **Urban vs. Rural:** The distribution of population is highly uneven, with significant differences between urban and rural areas.\n",
+       "*   **Migration:**  Migration patterns create complex shifts in population distribution.\n",
+       "*   **Regional Variations:** Within states, there are substantial variations in population density and demographics.\n",
+       "*   **Data Collection Challenges:** Accurately tracking people across all states and regions presents logistical challenges.  Census data is the most reliable but has limitations (e.g., sample size, geographic coverage).\n",
        "\n",
        "**Resources for Current Data:**\n",
        "\n",
-       "* **Census of India:** The most reliable source: [https://www.censusindia.gov.in/](https://www.censusindia.gov.in/) - Check the latest reports and data here.\n",
-       "* **National Sample Survey Office (NSSO):** [https://www.nsso.nic.in/](https://www.nsso.nic.in/) - Provides demographic data and trends.\n",
-       "* **World Bank:** [https://data.worldbank.org/](https://data.worldbank.org/) - Offers demographic data and regional comparisons.\n",
-       "* **Reserve Bank of India (RBI):** [https://www.rbi.org.in/](https://www.rbi.org.in/) - Provides macroeconomic data including population estimates.\n",
+       "*   **National Statistical Office (NSO) - Ministry of Statistics and Programme Implementation:** [https://www.mospi.gov.in/](https://www.mospi.gov.in/) – This is the primary source for official Indian population statistics.\n",
+       "*   **Census of India:** [https://censusindia.gov.in/](https://censusindia.gov.in/) – Provides detailed demographic data.\n",
+       "*   **Reserve Bank of India (RBI) – Population Data:** [https://www.rbi.org.in/](https://www.rbi.org.in/) - Offers demographic reports and data.\n",
+       "*   **World Bank – India:** [https://data.worldbank.org/country/India/statistics](https://data.worldbank.org/country/India/statistics) - A good source for global population trends.\n",
        "\n",
-       "**Conclusion:**\n",
+       "**In conclusion:**  The number of people living in different states of India is roughly 1.4 billion, with a substantial population spread across 28 states and 8 union territories. The exact distribution is complex and constantly evolving, but the above breakdown provides a reasonable estimate based on current data.\n",
        "\n",
-       "India has a massive population and a geographically uneven distribution.  While an exact number is elusive, it's safe to say that **between 1.4 and 1.5 billion people** currently live in India, with a strong concentration in the northern and southern regions.  The exact numbers fluctuate constantly, making it an area of continuous monitoring and analysis.\n",
+       "To give you an even more precise answer, could you tell me:\n",
        "\n",
-       "To provide a truly precise number, I'd need to access the latest official demographic data and be able to synthesize it across all the available sources."
+       "*   What level of detail are you interested in (e.g., just by state, or by region)?\n",
+       "*   Are there any specific regions you're particularly interested in?"
       ]
      },
      "execution_count": 9,
@@ -331,7 +351,7 @@
    "source": [
     "#% markdown\n",
     "\n",
-    "$chat-ans<Content>;"
+    "$chat-ans<content>;"
    ]
   },
   {
